# gemma4-assistant

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  personality.example.json
modal_app/: irodori_app.py
src/: chat.css  chat.html  chat.js  mascot.css  mascot.html  mascot.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browse.rs  commands.rs  config.rs  irodori.rs  lib.rs  main.rs  triggers.rs  tts.rs  voicevox.rs
src-tauri/src/office/: excel.rs  mod.rs  powerpoint.rs  runner.rs  sandbox.rs  types.rs  undo.rs  word.rs
src-tauri/src/tools/: parser.rs  schema.rs
tasks/: lessons.md
