[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[lib]
name = "assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
