[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[lib]
name = "assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
scraper = "0.22"
regex = "1"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(windows)'.dependencies]
# Office COM automation はPowerShell経由で実行する（実装を軽くするため）。
# 将来 windows-rs の IDispatch に置き換えても良い。
